# sxlm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  config.toml  deepspeed_config.json  deploy.sh  package.json  requirements.txt  setup.py  wrangler.toml
docs/: index.md  input_output_principles.md  spec.md  technical_specification.md
docs/.vitepress/: config.js  config.mjs  config.ts
docs/api/: index.md  python.md  rest.md  websocket.md
docs/architecture/: index.md
docs/deployment/: gcp.md
docs/guide/: architecture.md  getting-started.md  index.md
examples/: streaming_example.cpp
include/sintellix/: cic_channel_ops.h  embedding_config_loader.h  model_cic_processor.h
include/sintellix/core/: config.hpp  neuron_model.cuh  streaming_buffer.cuh
include/sxlm/attention/: hot_nsa.cuh
include/sxlm/core/: toml_config.hpp
include/sxlm/memory/: engram.cuh  sct.cuh
include/sxlm/multimodal/: fusion.cuh
include/sxlm/planning/: ring_buffer.cuh
include/sxlm/tools/: tool_port.cuh
include/sxlm/training/: el_trace.cuh  mhc.cuh
proto/: cic_data.proto  embedding_config.proto
python/: MANIFEST.in  bindings.cpp  pyproject.toml  setup.py
python/sintellix/: __init__.py  channel_ops.py
python/sxlm/: data.py  model.py
python/sxlm/api/: models.py  server.py
python/sxlm/client/: __init__.py
python/sxlm/core/: planner_port.py  pte_executor.py  ring_buffer.py
python/sxlm/training/: __init__.py  challenger.py  code_executor.py  el_trace_optimizer.py  openrouter.py  personality_data.py  rl.py  semi_supervised.py  sft.py
scripts/: deploy_do.py  deploy_vertex.py  deploy_vertex_single.sh  train_auto.py  train_quila.py  train_rl.py  train_semi.py  train_sft.py  train_simple.py
src/: cic_channel_ops.cpp  embedding_config_loader.cpp  model_cic_processor.cpp
src/attention/: hot_nsa.cu
src/codec/: decoder.cu  encoder.cu
src/core/: config.cpp  multi_gpu.cu  neuron_model.cu  streaming_buffer.cu  toml_config.cpp
src/cpp/proto/: neuron.proto  sxlm.proto
src/cpp/storage/: engram.cpp  engram.h  kfe_entry.h  kfe_library.cpp  kfe_library.h  nmdb.cpp  nmdb.h  persona.cpp  persona.h  sct.cpp  sct.h  sxlm_format.cpp  sxlm_format.h
src/cpp/utils/: sha256.cpp  sha256.h
src/cuda/attention/: analysis_port.cu  backward_align.cu  global_aggr.cuh  intercept.cu  intercept.cuh  linear_scan.cu  linear_scan.cuh  nsa_macro.cu  nsa_macro.cuh  planner_port.cu  port.cuh  thinker_port.cu  utility.cu  utility.cuh
src/cuda/conflict/: cdcl_solver.cu  cdcl_solver.cuh  suspicious_layer.cu  suspicious_layer.cuh
src/cuda/distributed/: kfe_distribution.cu  kfe_distribution.cuh  mem_advise.cu  mem_advise.cuh  nccl_comm.cu  nccl_comm.cuh  sharding.cu  sharding.cuh  stream_manager.cu  stream_manager.cuh  unified_memory.cu  unified_memory.cuh
src/cuda/graph/: topology_evolution.cu  topology_evolution.cuh
src/cuda/inference/: hypothesis_fork.cu  hypothesis_fork.cuh  phase0_encoding.cu  phase1_replay.cu  phase2_lastinput.cu  phase3_reread.cu  phase4_plan.cu  phase5_think.cu  phase6_output.cu  pipeline.cu  pipeline.cuh  replan_monitor.cu  stage_manager.cu  tool_port.cu
src/cuda/memory/: tiered_storage.cu  tiered_storage.cuh  wmq.cu  wmq.cuh
src/cuda/neuron/: consistency_model.cu  consistency_model.cuh  forward.cu  forward.cuh  init.cu  mhc.cu  mhc.cuh  neuron_grid.cuh  state.cuh
src/cuda/neuron/streams/: drc.cu  drc.cuh  linear_attn.cu  linear_attn.cuh  nsa.cu  nsa.cuh  ssm.cu  ssm.cuh
src/cuda/training/: backward.cu  backward.cuh  consistency_distillation.cu  consistency_distillation.cuh  credit_assignment.cu  credit_assignment.cuh  el_trace.cu  el_trace.cuh  sft_trainer.cu  sft_trainer.cuh
src/cuda/utils/: error.cuh  fp8.cu  fp8.cuh  memory.cu  memory.cuh
src/cuda/vqgan/: codebook.cu  codebook.cuh  decoder.cu  decoder.cuh  encoder.cu  encoder.cuh  rope.cu  rope.cuh  video_rope.cu  video_rope.cuh
src/memory/: engram.cu  sct.cu
src/multimodal/: fusion.cu
src/planning/: ring_buffer.cu
src/python/: run_server.py
src/python/api/: mcp_handler.py  server.py  websocket.py
src/python/bindings/: quila_bindings.cpp
src/python/preprocessing/: audio.py  image.py  text.py  video.py
src/python/training/: azr_trainer.py  cot_trainer.py  deepspeed_config.py  distillation.py  sft_trainer.py
src/tests/: integration_test.cu  test_neuron.cpp
src/tools/: tool_port.cu
src/training/: el_trace.cu  mhc.cu
terraform/gcp/: README.md  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf
terraform/vertex/: README.md  main.tf  variables.tf
