[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sxlm"
version = "0.2.0"
description = "SXLM (Sintellix Language Model) - Advanced language model with HOT, NSA, Engram, SCT, el-trace, and multi-modal support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "randomdevel0per, Anthropic Claude Sonnet 4.5", email = "noreply@anthropic.com"}
]
keywords = ["language-model", "neural-networks", "cuda", "deep-learning", "attention", "multi-modal", "hot", "nsa", "engram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "protobuf>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rand0mdevel0per/sxlm"
Documentation = "https://sxlm.readthedocs.io"
Repository = "https://github.com/rand0mdevel0per/sxlm"
Issues = "https://github.com/rand0mdevel0per/sxlm/issues"
